--- a/foodDelivery/bin/src/main/resources/application.yml
+++ b/foodDelivery/bin/src/main/resources/application.yml
@@ -10,13 +10,9 @@ spring:
         dialect:  org.hibernate.dialect.MySQL8Dialect
     show-sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
 server:
   port: 9005
   servlet:
     context-path: /api
-fooddelivery:
-  app:
-    jwtSecret: secretkey
-    jwtExpirationMs: 86400000
 
